Fix color-contrast issues in Datasets, Clinical Data and Summary pages

--- a/src/globalStyles/header.scss
+++ b/src/globalStyles/header.scss
@@ -149,7 +149,7 @@ header {
 #footer {
     text-align: center;
     padding: 30px;
-    opacity: 0.5;
+    opacity: 1;
 }
 
 .legacy #page_wrapper {
